--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.0",
     "sass": "^1.78.0",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
